--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <nav class="navbar">
       <div class="nav-container">
         <div class="nav-brand">
+          <span class="brand-text">Ward & Co.</span>
           <img
-            src="logo.svg"
+            src="noback.png"
             alt="Ward & Co. Logo"
             class="brand-logo"
             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';"
@@ -66,7 +67,7 @@
       </div>
       <div class="hero-image">
         <div class="hero-placeholder">
-          <img src="logo.svg" alt="Ward & Co. Logo" class="hero-logo" />
+          <img src="noback.png" alt="Ward & Co. Logo" class="hero-logo" />
         </div>
       </div>
     </section>
@@ -109,7 +110,7 @@
           </div>
           <div class="about-image">
             <div class="about-placeholder">
-              <img src="logo.svg" alt="Ward & Co. Logo" class="about-logo" />
+              <img src="noback.png" alt="Ward & Co. Logo" class="about-logo" />
             </div>
           </div>
         </div>
@@ -263,7 +264,7 @@
         <div class="footer-content">
           <div class="footer-brand">
             <img
-              src="logo.svg"
+              src="noback.png"
               alt="Ward & Co. Logo"
               class="brand-logo brand-logo-footer"
             />
